--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./111/task1/index.html">111</a>
+    <a href="./task1/index.html">111</a>
 </body>
 </html>
